# convex-macros

./: .gitignore  .lintstagedrc.js  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs  model.rs
tests/: main.rs  strings.rs  unions.rs
